reassign each pic class

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button onclick="getWeapon(weapon1, player1)">Get Fire Sword</button>
             <button onclick="getWeapon(weapon2, player1)">Get TNT</button>
             <button onclick="player1.attack(player2, player1.weapon)">ATTACK!!!</button>
-            <img src="lakitu_super_mario_bros_icon_232945.png" alt="lakitu pic" class="pic">
+            <img src="lakitu_super_mario_bros_icon_232945.png" alt="lakitu pic" class="pic1">
         </div>
         <div class="playerBoard">
             <h2>Name: <span id="player2Name"></span></h2>
@@ -26,7 +26,7 @@
             <button onclick="getWeapon(weapon1, player2)">Get Fire Sword</button>
             <button onclick="getWeapon(weapon2, player2)">Get TNT</button>
             <button onclick="player2.attack(player1, player2.weapon)">ATTACK!!!</button>
-            <img src="roy_koopa.webp" alt="roy pic" class="pic">
+            <img src="roy_koopa.webp" alt="roy pic" class="pic2">
         </div>
     </div>
 </body>
