--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <button onclick="player1.getWeapon(weapon2)">Get TNT</button>
             </div>
             <div>
-                <button onclick="player1.getPotion(potion1)">Health Potion</button>
-                <button onclick="player1.getPotion(potion2)">Health Potion</button>
-                <button onclick="player1.getPotion(potion3)">Health Potion</button>
+                <button onclick="player1.getPotion(potion1)">Potion</button>
+                <button onclick="player1.getPotion(potion2)">Super Potion</button>
+                <button onclick="player1.getPotion(potion3)">Hyper Potion</button>
             </div>
             <div>
                 <button onclick="player1.attack(player2, player1.weapon)">ATTACK!!!</button>
@@ -40,9 +40,9 @@
                 <button onclick="player2.getWeapon(weapon2)">Get TNT</button>
             </div>
             <div>
-                <button onclick="player2.getPotion(potion1)">Health Potion</button>
-                <button onclick="player2.getPotion(potion2)">Health Potion</button>
-                <button onclick="player2.getPotion(potion3)">Health Potion</button>
+                <button onclick="player2.getPotion(potion1)">Potion</button>
+                <button onclick="player2.getPotion(potion2)">Super Potion</button>
+                <button onclick="player2.getPotion(potion3)">Hyper Potion</button>
             </div>
             <div>
                 <button onclick="player2.attack(player1, player2.weapon)">ATTACK!!!</button>
