display game over popup

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Declan's Game</h1>
     <div id="gameBoard">
+        <div id="gameOver">
+            GAME OVER
+        </div>
         <div class="playerBoard">
             <h2>Name: <span id="player1Name"></span></h2>
             <p>Weapon: <span id="player1Weapon"></span></p>
