now have 4 weapons and potions

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
             <div>
                 <button onclick="player1.getWeapon(weapon1)">Get Fire Sword</button>
                 <button onclick="player1.getWeapon(weapon2)">Get TNT</button>
+                <button onclick="player1.getWeapon(weapon3)">Get Flame Thrower</button>
+                <button onclick="player1.getWeapon(weapon4)">Get Laser</button>
             </div>
             <div>
                 <button onclick="player1.getPotion(potion1)">Potion</button>
                 <button onclick="player1.getPotion(potion2)">Super Potion</button>
                 <button onclick="player1.getPotion(potion3)">Hyper Potion</button>
+                <button onclick="player1.getPotion(potion4)">Ultra Potion</button>
             </div>
             <div>
                 <button onclick="player1.attack(player2, player1.weapon)">ATTACK!!!</button>
