--- a/index.html
+++ b/index.html
@@ -44,11 +44,14 @@
             <div>
                 <button onclick="player2.getWeapon(weapon1)">Get Fire Sword</button>
                 <button onclick="player2.getWeapon(weapon2)">Get TNT</button>
+                <button onclick="player2.getWeapon(weapon3)">Get Flame Thrower</button>
+                <button onclick="player2.getWeapon(weapon4)">Get Laser</button>
             </div>
             <div>
                 <button onclick="player2.getPotion(potion1)">Potion</button>
                 <button onclick="player2.getPotion(potion2)">Super Potion</button>
                 <button onclick="player2.getPotion(potion3)">Hyper Potion</button>
+                <button onclick="player2.getPotion(potion4)">Ultra Potion</button>
             </div>
             <div>
                 <button onclick="player2.attack(player1, player2.weapon)">ATTACK!!!</button>
